--- a/DockerMongo/Dockerfile
+++ b/DockerMongo/Dockerfile
@@ -3,3 +3,6 @@ LABEL maintainer="noemail@website.domain"
 COPY . /todo
 WORKDIR /todo
 RUN pip install -r requirements.txt
+ENTRYPOINT ["python"]
+CMD ["app.py"]
+
